# ape-apeman

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
ape_apeman/: __init__.py  account.py  cli.py  context.py  contract.py  exceptions.py  factory.py  json.py  main.py  manager.py  version.py
docs/: Makefile  ape_apeman.rst  cli.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  readme.rst
examples/: events.py
make.include/: common.mk  requirements.mk  test.mk  version.mk
tests/: __init__.py  conftest.py  test_call.py  test_cli.py  test_module.py
tests/data/: test_contract.json
