[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.10"



[project]
name = "ape-apeman"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["ape apeman eth-ape"]
classifiers = [
  "Intended Audience :: Developers",

  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "ape-alchemy",
  "ape-etherscan",
  "click",
  "eth-ape",
  "python-box"
]

[tool.flit.module]
name = "ape_apeman"

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "coverage",
  "isort",
  "flake8",
  "flake8-length",
  "pytest",
  "toml",
  "tox"
]
docs = [
  "m2r2",
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme"
]

[project.urls]
Home = "https://github.com/rstms/ape_apeman"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
apeman = "ape_apeman:cli"
